--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -3,9 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_maps"
+        android:icon="@drawable/baseline_map_24"
+        app:showAsAction="always"
+        android:title="@string/google_maps" />
+
+
+    <item
         android:id="@+id/action_logout"
         android:icon="@drawable/icon_logout_24"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:title="@string/logout"/>
+
+
 
 </menu>
